compiler/tests/fixtures/negative/error_sema_call_undef.sol
// E1015: call to undefined function.
function start() -> int {
    return fake_function(1, 2);
}
